# tauri-notes-app

./: README.md
doc/: index.html
src/: index.html  main.js  styles.css
src-tauri/: .taurignore  Cargo.toml  notes.db  notes.json  tauri.conf.json
src-tauri/src/: main.rs
